refactor(validation): move simple checks to validated boundaries
Declare simple application-command constraints with Jakarta Validation.
Validate configuration and security commands before use-case execution.
Keep normalization and defensive copying inside command constructors.
Preserve domain constructors for self-enforcing invariants.
Share validation limits between application and HTTP request models.
Require non-null validated HTTP request bodies explicitly.
Add integration coverage for invalid internal application commands.